# AD_Repo

./: .gitignore  CMakeLists.txt  main.cpp
AD_SE_4/: CMakeLists.txt  main.cpp
AD_SE_4/lib/UE1/: UE1_2  UE1_3  UE_1
AD_SE_4/lib/UE2/: UE2Main  UE2RM
AD_SE_4/lib/UE3/: UE_3.cpp
AD_SE_4/lib/UE4/: UE4_2.h  UE_4.cpp  UE_4.h
AD_SE_4/lib/UE5/: UE5.cpp  UE5.h
AD_SE_4/lib/UE6/Countsort/: Countsort.cpp  Countsort.h
AD_SE_4/lib/UE6/LinkedListQS/: LinkedList.cpp  LinkedList.h
AD_SE_4/lib/UE6/Lottery/: Ringlist.cpp  Ringlist.h
AD_SE_4/lib/UE6/Rucksack/: Rucksack.cpp  Rucksack.h
executables/: executable
executables/executable.dSYM/Contents/Resources/DWARF/: executable
executables/executable.dSYM/Contents/Resources/Relocations/aarch64/: executable.yml
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/binaries/: AVLTree.cpp  BinarySearchTree.cpp  Countsort.cpp  Hashing.cpp  LinkedList.cpp  PriorityQueue.cpp  Rucksack.cpp  UE4_2.cpp  UE5.cpp  UE_3.cpp  UE_4.cpp  skiplist.cpp  textsuche.cpp
src/lib/: AVLTree.h  BinarySearchTree.h  Countsort.h  GraphenSuche.h  Hashing.h  LinkedList.h  PriorityQueue.h  Ringlist.h  Rucksack.h  UE5.h  UE_3.h  UE_4.h  skiplist.h  textsuche.h
